fix: minor style fixes, fix chrome layout bug on android mobiles

--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -5,4 +5,6 @@
   white-space: nowrap;
   line-height: 1;
   margin: 0 24px;
+
+  box-sizing: border-box;
 }
