--- a/src/components/input/input.component.scss
+++ b/src/components/input/input.component.scss
@@ -3,12 +3,11 @@
 .form-group {
   position: relative;
   margin: 24px;
+  font-size: 0.875rem;
 
   .form-input-label {
-    top: -0.4rem;
+    top: -7px;
     position: absolute;
-
-    font-size: 0.875rem;
 
     margin-left: 0.625rem;
 
@@ -23,7 +22,21 @@
     border-radius: 4px;
     background-color: $color-secondary;
     padding: 18px 0 15px 11px;
+    box-sizing: border-box;
 
     width: 278px;
+    height: 50px;
+  }
+  /*Style reset for iOS devices*/
+  @supports (-webkit-appearance: none) {
+    .form-input[type='date'] {
+      -webkit-appearance: none;
+      box-sizing: border-box;
+      color: black;
+    }
+
+    .form-input::-webkit-date-and-time-value {
+      text-align: left;
+    }
   }
 }
